--- a/style.css
+++ b/style.css
@@ -7,3 +7,22 @@
 img {
   width: 100%;
 }
+
+.container {
+  max-width: 1640px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+header {
+  background-color: darkgreen;
+  height: 150px;
+  margin-bottom: 200px;
+}
+
+h1 {
+  text-align: center;
+  padding-top: 50px;
+  font-size: 40px;
+  color: rgb(58, 3, 95);
+}
